# spin_hamiltonian

./: .gitignore  CMakeLists.txt  README  input
source/: eigensolver.F90  main.F90  mod_constants.F90  mod_hamiltonian.F90  mod_parameters.F90  mod_spins.F90  mod_tools.F90  mod_types.F90
